config: autoreload - autoreload still not possible from vscode, you must run rshiny from rstudio

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,14 @@
-version: '3'
 services:
-  rstudio:
-    image: carbonviewer-rstudio
+  shiny:
+    image: carbonviewer
+    build: .
     ports:
       - 8787:8787
-    volumes:
-      - ${PWD}/:/home/rstudio/app
-      - ${HOME}/Downloads:/home/willeke.acampo/Downloads
-    environment:
-      - DISABLE_AUTH=true
-
-  shiny:
-    image: carbonviewer-shiny
-    ports:
       - 8999:8999
     volumes:
       - ${HOME}/Downloads:/home/willeke.acampo/Downloads
+      - ./app.R:/home/rstudio/app/app.R
+      - ./appScripts:/home/rstudio/app/appScripts
+      - ./translation.json:/home/rstudio/app/translation.json
+    environment:
+      - DISABLE_AUTH=true
