config: add docs as volume

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - ${HOME}/Downloads:/home/willeke.acampo/Downloads
       - ./app.R:/home/rstudio/app/app.R
       - ./appScripts:/home/rstudio/app/appScripts
+      - ./docs:/home/rstudio/app/docs
       - ./translation.json:/home/rstudio/app/translation.json
     environment:
       - DISABLE_AUTH=true
